<resources>
    <string name="app_name">Housie</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="signout">Sign out</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="joinroom">Join Room</string>
    <string name="createroom">Create Room</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
    <string name="addfriend">Add Friend</string>
    <string name="search">Search</string>
    <string name="searchfriend">Search by Email</string>
    <string name="sendrequest">Send Request</string>
    <string name="myfriends">My Friends</string>
    <string name="friendrequests">Friend Requests</string>
    <string name="searchpeople">Search People</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="remove">Remove</string>
    <string name="status">Status</string>
</resources>
