<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity"
    android:orientation="vertical">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_signout"
        android:text="@string/signout"
        android:layout_marginTop="8dp"
        android:layout_gravity="right"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_profile"
        android:text="@string/profile"
        android:layout_marginTop="100dp"
        android:padding="25dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_friends"
        android:text="@string/friends"
        android:layout_marginTop="25dp"
        android:padding="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_join"
        android:text="@string/joinroom"
        android:layout_marginTop="25dp"
        android:padding="25dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create"
        android:text="@string/createroom"
        android:layout_marginTop="25dp"
        android:padding="25dp"/>

</LinearLayout>