<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_name"
        android:hint="@string/name"
        android:autofillHints="false"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_email"
        android:hint="@string/email"
        android:autofillHints="false"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_password"
        android:hint="@string/password"
        android:autofillHints="false"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:text="@string/submit"
        android:layout_marginTop="35dp"/>


</LinearLayout>